--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "dev.to",
+  "name": "my-dev.to",
+  "version": "0.0.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/YOUR-USERNAME/YOUR-REPO.git"
+    "url": "https://github.com/christophechevalier/my-dev.to.git"
   },
   "scripts": {
     "prettier": "prettier",
@@ -14,9 +15,10 @@
     "embedme:write": "yarn run embedme",
     "dev-to-git": "dev-to-git"
   },
+  "private": true,
   "dependencies": {
     "dev-to-git": "1.1.0",
-    "embedme": "1.11.0",
+    "embedme": "1.17.1",
     "prettier": "1.18.2"
   }
 }
